# ibiapray

./: .gitignore  Dockerfile  README.md  ansible.cfg  setup.cfg
inventory/sample/: inventory.ini
inventory/sample/group_vars/: all.yaml
inventory/sample/group_vars/all/: all.yaml
macos/: install.sh  test.sh
playbooks/: boilerplate.yml  cluster.yml  facts.yml  reset.yml
roles/adduser/defaults/: main.yml
roles/bootstrap-os/tasks/: bootstrap-coreos.yml  bootstrap-debian.yml  bootstrap-flatcar.yml
roles/download/tasks/: main.yml
roles/kubernetes/kubeadm/tasks/: main.yml
roles/kubernetes/kubeadm/templates/: kubeadm-client.conf.v1beta3.j2
roles/kubernetes/node-label/defaults/: main.yml
roles/kubernetes/node/defaults/: main.yml
roles/kubernetes/node/tasks/: install.yml  main.yml
roles/kubernetes/node/templates/: kubelet-config.v1beta1.yaml.j2  kubelet.env.v1beta1.j2  kubelet.service.j2
roles/kubernetes/node/templates/loadbalancer/: haproxy.cfg.j2  nginx.conf.j2
roles/kubernetes/preinstall/defaults/: main.yml
roles/kubernetes/preinstall/handlers/: main.yml
roles/kubernetes/preinstall/tasks/: 0040-verify-settings.yml
roles/kubespray-defaults/defaults/main/: download.yml  main.yml
roles/kubespray-defaults/tasks/: fallback_ips.yml  main.yaml
roles/network_plugin/calico/meta/: main.yml
roles/network_plugin/calico/tasks/: check.yml  install.yml  peer_with_calico_rr.yml  peer_with_router.yml  pre.yml
roles/reset/tasks/: main.yml
scripts/: install.sh  macos_install.sh  macos_offline_install.sh  offline.yml
