[metadata]
name = ibiapray
summary = Ansible modules for installing Kubernetes
description-file =
    README.md
author = IBIACLOUD
author-email = ibiacloud@gmail.com
license = Apache License (2.0)
home-page = https://github.com/ibiacloud/ibiapray
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/share/ibiapray/playbooks/ =
        cluster.yml
        upgrade-cluster.yml
        scale.yml
        reset.yml
        remove-node.yml
    usr/share/ibiapray/roles = roles/*
    usr/share/ibiapray/library = library/*
    etc/ibiapray/ = ansible.cfg
    etc/ibiapray/inventory/sample/group_vars/all/ =
        inventory/sample/group_vars/all.yml

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[bdist_rpm]
group = "System Environment/Libraries"
requires =
    ansible
    python-jinja2
    python-netaddr
